aks-cluster/influx/00-roles.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
