aks-cluster/influx/12-deployment.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: telegraf-ds
  namespace: monitoring
  labels:
    app.kubernetes.io/name: telegraf-ds
    app.kubernetes.io/instance: telegraf-ds
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: telegraf-ds
      app.kubernetes.io/instance: telegraf-ds
  template:
    metadata:
      labels:
        app.kubernetes.io/name: telegraf-ds
        app.kubernetes.io/instance: telegraf-ds
    spec:
      serviceAccountName: telegraf
      containers:
      - name: telegraf-ds
        image: "telegraf:latest"
        imagePullPolicy: "IfNotPresent"
        volumeMounts:
        - name: config
          mountPath: /etc/telegraf
      volumes:
      - name: config
        configMap:
          name: telegraf-ds
