aks-cluster/influx/42-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telegraf-sm
  namespace: monitoring
  labels:
    app.kubernetes.io/name: telegraf-sm
    app.kubernetes.io/instance: telegraf-sm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: telegraf-sm
      app.kubernetes.io/instance: telegraf-sm
  template:
    metadata:
      labels:
        app.kubernetes.io/name: telegraf-sm
        app.kubernetes.io/instance: telegraf-sm
    spec:
      serviceAccountName: telegraf
      containers:
      - name: telegraf
        image: "telegraf:latest"
        imagePullPolicy: "IfNotPresent"
        volumeMounts:
        - name: config
          mountPath: /etc/telegraf
      volumes:
      - name: config
        configMap:
          name: telegraf-sm
