aks-cluster/influx/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: influxdb
  namespace: monitoring
  labels:
    app.kubernetes.io/name: influxdb2
    app.kubernetes.io/instance: influxdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: influxdb2
      app.kubernetes.io/instance: influxdb
  template:
    metadata:
      labels:
        app.kubernetes.io/name: influxdb2
        app.kubernetes.io/instance: influxdb
    spec:
      serviceAccountName: influxdb
      containers:
        - name: influxdb2
          image: "influxdb:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8086
          volumeMounts:
          - name: data
            mountPath: /var/lib/influxdb2
      volumes:
        - name: data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: influxdb
  namespace: monitoring
  labels:
    app.kubernetes.io/name: influxdb2
    app.kubernetes.io/instance: influxdb
spec:
  selector:
    app.kubernetes.io/name: influxdb2
    app.kubernetes.io/instance: influxdb
  type: ClusterIP
  ports:
    - port: 8086
      targetPort: 8086
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: influxdb
  namespace: monitoring
  labels:
    app.kubernetes.io/name: influxdb2
    app.kubernetes.io/instance: influxdb
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - host: influx.ingress.host
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: influxdb
                port:
                  number: 8086
